@@ -1,3 +1,8 @@
+2001-01-08  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/commands/groups.jl (delete-group): added special
+	case so that desktop windows don't get deleted
+
 2001-01-07  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/ext/audio-events.jl (audio-events-alist): change
